--- a/TicTacToe/Help/helpdocs.html
+++ b/TicTacToe/Help/helpdocs.html
@@ -14,7 +14,7 @@
 <ul>
 <li><a href="#machineHuman">On this Machine Vs. Human</a></li>
 <li><a href="#machineAI">On this Machine Vs. AI</a></li>
-<li><a href="#net">Network Based</a></li>
+<li><a href="#network">Network Based</a></li>
 <li><a href="#pg">Play</a></li>
 <li><a href="#reset">Reset</a></li>
 </ul>
@@ -38,17 +38,15 @@
 <left><img src= "./Resources/TicTacToeMainMenu.png" alt="TicTacToe Main"></left> 
 <h3><a name="help">Access Help</a></h3>
 <p>Help document can be accessed any time.</p>
-<h3><a name="highscores">High Scores</a></h3>
-<p>This screen gives users the list of TicTacToe high scorers.</p>
 <h3><a name="play">Play </a></h3>
 <p>Play button allows users to initialize the game. On its click, a second screen pops up which leads to initializing a two player game 
 either in the same computer, on the internet or a game played against the computer. To proceed, a player name is required after which 
 either of the options button is selected.</p>
 <left><img src= "./Resources/TicTacToePlayButt.png" alt="TicTacToe Play"></left> 
-<h4><a name="machine">On this Machine Vs. Human</a></h3>
+<h4><a name="machineHuman">On this Machine Vs. Human</a></h3>
 <p>Entering the player name and clicking on this button allows you to enter player two's name and start playing the game.</p>
 <left><img src= "./Resources/Player2.png" alt="TicTacToe player2"></left> 
-<h4><a name="machine">On this Machine Vs. AI</a></h3>
+<h4><a name="machineAI">On this Machine Vs. AI</a></h3>
 <p>Entering the player name and clicking on this button allows you to start playing a game against the computer. In playing against the 
 computer, the difficulty level can be set to either easy, medium or hard. Also in the game, alternating player turns is specified with 
 a counter of wins for both human player and the computer as well as the total number of times the game is played since the game session 
@@ -74,6 +72,8 @@ rounds won is also counted for each player.</p>
 <p><left><img src= "./Resources/GameInfo.png" alt="TicTacToe GameRound"></left></p>
 <h4><a name="reset">Reset Button</a></h3>
 <p>Reset button allows a player to reset the game board. All board cells are emptied.</p>
+<h3><a name="highscores">High Scores</a></h3>
+<p>This screen gives users the list of TicTacToe high scorers.</p>
 <h3><a name="exit">Exit</a></h3>
 <p>When the exit button is clicked, the game session(s) is/are lost and the game is closed.</p>
 </body>
